--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
@@ -246,23 +246,22 @@
   difficulty: 0.4
   generationWeight: 0.25
   layers:
-    - !type:MobsDunGen
-      minCount: 25
-      maxCount: 50
-      groups:
-      - id: LandMineExplosive
-        amount: 1
+    - !type:OreDunGen
+      entity: LandMineExplosive
+      count: 20
+      minGroupSize: 1
+      maxGroupSize: 2
 
 - type: cp14DemiplaneModifier
   id: CommonLoot
   reward: 0.25
   generationWeight: 2
   layers:
-    - !type:EntityTableDunGen
-      minCount: 15
-      maxCount: 30
-      table: !type:NestedSelector
-        tableId: CP14TableExpeditionLootCommon
+    - !type:OreDunGen
+      entity: CP14SpawnerExpeditionLootCommon
+      count: 10
+      minGroupSize: 1
+      maxGroupSize: 3
 
 - type: cp14DemiplaneModifier
   id: EnemyXeno
@@ -270,25 +269,26 @@
   requiredTags:
   - CP14DemiplaneUnderground
   layers:
-    - !type:MobsDunGen
-      minCount: 2
-      maxCount: 3
-      groups:
-      - id: CP14MobXenoDrone
-        amount: 1
-      - id: CP14MobXeno
-        amount: 1
+    - !type:OreDunGen
+      entity: CP14MobXenoDrone
+      count: 3
+      minGroupSize: 1
+      maxGroupSize: 2
+    - !type:OreDunGen
+      entity: CP14MobXeno
+      count: 3
+      minGroupSize: 1
+      maxGroupSize: 2
 
 - type: cp14DemiplaneModifier
   id: EnemyZombie
   difficulty: 0.4
   layers:
-    - !type:MobsDunGen
-      minCount: 3
-      maxCount: 6
-      groups:
-      - id: CP14SpawnMobUndeadZombie
-        amount: 1
+    - !type:OreDunGen
+      entity: CP14SpawnMobUndeadZombie
+      count: 3
+      minGroupSize: 1
+      maxGroupSize: 3
 
 - type: cp14DemiplaneModifier
   id: EnemyDyno
@@ -297,12 +297,11 @@
   - CP14DemiplaneOpenSky
   - CP14DemiplaneGrass
   layers:
-    - !type:MobsDunGen
-      minCount: 3
-      maxCount: 6
-      groups:
-      - id: CP14SpawnMobDinoYumkaraptor
-        amount: 1
+    - !type:OreDunGen
+      entity: CP14SpawnMobDinoYumkaraptor
+      count: 6
+      minGroupSize: 1
+      maxGroupSize: 1
 
 - type: cp14DemiplaneModifier
   id: SmallHydra
@@ -310,12 +309,11 @@
   requiredTags:
   - CP14DemiplaneGrass
   layers:
-    - !type:MobsDunGen
-      minCount: 3
-      maxCount: 6
-      groups:
-      - id: CP14MobDinoSmallHydra
-        amount: 2
+    - !type:OreDunGen
+      entity: CP14MobDinoSmallHydra
+      count: 3
+      minGroupSize: 2
+      maxGroupSize: 3
 
 - type: cp14DemiplaneModifier
   id: EnemyMole
@@ -323,24 +321,22 @@
   requiredTags:
   - CP14DemiplaneUnderground
   layers:
-    - !type:MobsDunGen
-      minCount: 3
-      maxCount: 6
-      groups:
-      - id: CP14MobMonsterMole
-        amount: 1
+    - !type:OreDunGen
+      entity: CP14MobMonsterMole
+      count: 5
+      minGroupSize: 1
+      maxGroupSize: 2
 
 - type: cp14DemiplaneModifier
   id: EnemyMagmawind
   difficulty: 0.3
   generationWeight: 0.4
   layers:
-    - !type:MobsDunGen
-      minCount: 3
-      maxCount: 5
-      groups:
-      - id: CP14MobWatcherMagmawing
-        amount: 1
+    - !type:OreDunGen
+      entity: CP14MobWatcherMagmawing
+      count: 5
+      minGroupSize: 2
+      maxGroupSize: 3
 
 - type: cp14DemiplaneModifier
   id: Rabbits
@@ -349,12 +345,11 @@
   requiredTags:
   - CP14DemiplaneGrass
   layers:
-    - !type:MobsDunGen
-      minCount: 1
-      maxCount: 2
-      groups:
-      - id: CP14MobRabbit
-        amount: 3
+    - !type:OreDunGen
+      entity: CP14MobRabbit
+      count: 3
+      minGroupSize: 2
+      maxGroupSize: 3
 
 - type: cp14DemiplaneModifier
   id: Boar
@@ -364,12 +359,11 @@
   requiredTags:
   - CP14DemiplaneGrass
   layers:
-    - !type:MobsDunGen
-      minCount: 1
-      maxCount: 3
-      groups:
-      - id: CP14MobBoar
-        amount: 2
+    - !type:OreDunGen
+      entity: CP14MobBoar
+      count: 3
+      minGroupSize: 2
+      maxGroupSize: 3
 
 - type: cp14DemiplaneModifier
   id: Chasm
