--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
@@ -311,7 +311,7 @@
   layers:
     - !type:OreDunGen
       entity: CP14MobDinoSmallHydra
-      count: 3
+      count: 4
       minGroupSize: 2
       maxGroupSize: 3
 
@@ -320,8 +320,11 @@
   difficulty: 0.5
   requiredTags:
   - CP14DemiplaneUnderground
+  - CP14DemiplaneCave
   layers:
     - !type:OreDunGen
+      tileMask: 
+      - CP14FloorBase
       entity: CP14MobMonsterMole
       count: 5
       minGroupSize: 1
@@ -346,6 +349,10 @@
   - CP14DemiplaneGrass
   layers:
     - !type:OreDunGen
+      tileMask: 
+      - CP14FloorGrass
+      - CP14FloorGrassLight
+      - CP14FloorGrassTall
       entity: CP14MobRabbit
       count: 3
       minGroupSize: 2
@@ -360,6 +367,10 @@
   - CP14DemiplaneGrass
   layers:
     - !type:OreDunGen
+      tileMask: 
+      - CP14FloorGrass
+      - CP14FloorGrassLight
+      - CP14FloorGrassTall
       entity: CP14MobBoar
       count: 3
       minGroupSize: 2
