--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_dagger.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_dagger.yml
@@ -17,7 +17,6 @@
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneIceDagger
   - type: InstantAction
-    useDelay: 15
     itemIconStyle: BigAction
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/rumble.ogg
@@ -25,7 +24,8 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: ice_dagger
     event: !type:CP14DelayedInstantActionEvent
-      delay: 0.5
+      cooldown: 10
+      castDelay: 0.5
       breakOnMove: false
 
 - type: entity
