--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T0_flame_creation.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T0_flame_creation.yml
@@ -20,7 +20,6 @@
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneFlameCreation
   - type: InstantAction
-    useDelay: 10
     itemIconStyle: BigAction
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/rumble.ogg
@@ -28,7 +27,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: flame_creation
     event: !type:CP14DelayedInstantActionEvent
-      delay: 1
+      cooldown: 10
       breakOnMove: false
 
 - type: entity
