--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T1_flash_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T1_flash_light.yml
@@ -20,7 +20,6 @@
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneFlashLight
   - type: EntityWorldTargetAction
-    useDelay: 5
     range: 10
     itemIconStyle: BigAction
     sound: !type:SoundPathSpecifier
@@ -29,7 +28,8 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: flash_light
     event: !type:CP14DelayedEntityWorldTargetActionEvent
-      delay: 0.5
+      cooldown: 5
+      castDelay: 0.5
 
 - type: entity
   id: CP14RuneFlashLight
