--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/Ammunition/crossbowBolts.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/Ammunition/crossbowBolts.yml
@@ -4,6 +4,8 @@
   categories: [ ForkFiltered ]
   abstract: true
   components:
+  - type: Item
+    size: Tiny
   - type: Tag
     tags:
     - CP14CrossbowBolt
