--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/spawners.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/spawners.yml
@@ -62,6 +62,7 @@
         - id: CP14VialTinyLumiMushroom
       - id: CP14SilverCoin5
       - id: CP14Nail10
+      - id: CP14BaseLockpick
       - id: CP14EnergyCrystalMedium
       - id: CP14DemiplanKey
       - !type:AllSelector
