--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/grasshighbush.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/grasshighbush.yml
@@ -79,7 +79,7 @@
         acts: [ "Destruction" ]
       - !type:SpawnEntitiesBehavior
         spawn:
-          CP14FloraMaterial:
+          CP14FloraMaterial1:
             min: 0
             max: 2
   - type: SpeedModifierContacts
