--- a/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/paper.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/paper.yml
@@ -73,6 +73,6 @@
     - state: paper_filled
       map: ["enum.PaperVisualLayers.Writing"]
       visible: false
-    #- state: paper_stamp-generic
-    #  map: ["enum.PaperVisualLayers.Stamp"]
-    #  visible: false
+    - state: paper_stamp-generic
+      map: ["enum.PaperVisualLayers.Stamp"]
+      visible: false
