--- a/Resources/Prototypes/_CP14/Catalog/Fills/dresser.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/dresser.yml
@@ -33,3 +33,23 @@
         prob: 0.2
       - id: CP14ClothingEyesGlasses
         prob: 0.3
+
+- type: entity
+  parent: CP14WoodenCabinet
+  id: CP14WoodenCabinetCommandant
+  suffix: Commandant, Filled
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14ClothingCloakCommandantJacket
+        prob: 1
+      - id: CP14ClothingHeadBowlerGolden
+        prob: 0.5
+      - id: CP14ClothingPantsAristocratic
+        prob: 0.5
+      - id: CP14ClothingShirtBanker
+        prob: 0.5
+      - id: CP14ClothingEyesMonocle
+        prob: 0.2
+      - id: CP14ClothingEyesGlasses
+        prob: 0.3
