--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -92,6 +92,7 @@
     damageModifierSet: CP14Zombie
   - type: PassiveDamage
     allowedStates:
+    - Alive
     - Critical
     damage:
       groups:
