Zombies on style (#531)
* zombie styl

* random

* randomrandom

* random3

* random4

* random5

* Random6

* random7

* mega zombie nerf

* Update zombie.yml

---------

Co-authored-by: Ed <96445749+TheShuEd@users.noreply.github.com>
Co-authored-by: Ed <edwardxperia2000@gmail.com>

--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -9,6 +9,38 @@
   components:
   - type: HumanoidAppearance
     species: CP14Zombie
+  - type: Sprite
+    layers:
+    - map: [ "enum.HumanoidVisualLayers.Chest" ]
+    - map: [ "enum.HumanoidVisualLayers.Head" ]
+    - map: [ "enum.HumanoidVisualLayers.Snout" ]
+    - map: [ "enum.HumanoidVisualLayers.Eyes" ]
+    - map: [ "enum.HumanoidVisualLayers.RArm" ]
+    - map: [ "enum.HumanoidVisualLayers.LArm" ]
+    - map: [ "enum.HumanoidVisualLayers.RLeg" ]
+    - map: [ "enum.HumanoidVisualLayers.LLeg" ]
+    - map: [ "shirt" ]
+    - map: [ "pants" ]
+    - map: [ "enum.HumanoidVisualLayers.LFoot" ]
+    - map: [ "enum.HumanoidVisualLayers.RFoot" ]
+    - map: [ "enum.HumanoidVisualLayers.LHand" ]
+    - map: [ "enum.HumanoidVisualLayers.RHand" ]
+    - map: [ "gloves" ]
+    - map: [ "shoes" ]
+    - map: [ "ears" ]
+    - map: [ "cloak" ]
+    - map: [ "eyes" ]
+    - map: [ "belt1" ]
+    - map: [ "belt2" ]
+    - map: [ "neck" ]
+    - map: [ "back" ]
+    - map: [ "enum.HumanoidVisualLayers.HeadSide" ]
+    - map: [ "enum.HumanoidVisualLayers.HeadTop" ]
+    - map: [ "enum.HumanoidVisualLayers.Tail" ]
+    - map: [ "mask" ]
+    - map: [ "head" ]
+    - map: [ "pocket1" ]
+    - map: [ "pocket2" ]
   - type: Icon
     sprite: _CP14/Mobs/Species/Zombie/parts.rsi
     state: full
@@ -23,15 +55,17 @@
   - type: MobState
     allowedStates:
     - Alive
+    - Critical
     - Dead
   - type: MobThresholds
     thresholds:
       0: Alive
-      140: Dead
+      40: Critical
+      120: Dead
   - type: SlowOnDamage
     speedModifierThresholds:
-      80: 0.8
-      110: 0.4
+      10: 0.8
+      30: 0.4
   - type: StatusEffects
     allowed:
     - KnockedDown
@@ -39,7 +73,6 @@
     - Electrocution
     - Stutter
     - TemporaryBlindness
-    - Pacified
   - type: RotationVisuals
     defaultRotation: 90
     horizontalRotation: 90
@@ -60,11 +93,11 @@
   - type: PassiveDamage
     allowedStates:
     - Alive
-    damageCap: 130
+    - Critical
     damage:
       groups:
-        Brute: -0.3
-        Burn: -0.3
+        Brute: -2
+        Burn: -2
   - type: MeleeWeapon
     altDisarm: false
     angle: 0
@@ -74,9 +107,8 @@
     damage:
       types:
         Slash: 4
-        Structural: 2
+        Structural: 4
   - type: Pullable
-  - type: GhostTakeoverAvailable
   - type: SpamEmitSound
     minInterval: 10
     maxInterval: 30
