--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
@@ -2,8 +2,9 @@
 
 - type: entity
   name: walking dead spawner
-  id: CP14SpawnMobUndeadZombie
+  id: CP14SpawnMobUndeadZombieRandom
   parent: MarkerBase
+  suffix: Random
   categories: [ ForkFiltered ]
   components:
   - type: Sprite
@@ -12,9 +13,25 @@
       state: green
     - sprite: _CP14/Mobs/Species/Zombie/parts.rsi
       state: full
-  - type: ConditionalSpawner
-    prototypes:
-    - CP14MobUndeadZombie
+  - type: EntityTableSpawner
+    table: !type:GroupSelector
+      children:
+      - !type:GroupSelector
+        weight: 60
+        children:
+        - id: CP14MobUndeadZombieGearEasy1
+        - id: CP14MobUndeadZombieGearEasy2
+        - id: CP14MobUndeadZombieGearEasy3
+      - !type:GroupSelector
+        weight: 30
+        children:
+        - id: CP14MobUndeadZombieGearMedium1
+        - id: CP14MobUndeadZombieGearMedium2
+      - !type:GroupSelector
+        weight: 10
+        children:
+        - id: CP14MobUndeadZombieGearHard1
+        - id: CP14MobUndeadZombieGearHard2
 
 # Animal
 
