--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -5,16 +5,17 @@
   components:
   - type: StorageFill
     contents:
+      - id: CP14KeyRingAlchemist
       - id: HandLabeler #TODO custom cp14 labeler
       - id: Syringe #TODO custom cp14 syringe
-        amount: 3
+        amount: 2
       - id: CP14Cauldron
       - id: CP14Pestle
-        amount: 2
+        amount: 1
       - id: CP14Mortar
-        amount: 2
+        amount: 1
       - id: CP14Dropper
-        amount: 2
+        amount: 1
       - id: CP14VialTiny
         amount: 7
       - id: CP14VialSmall
@@ -42,7 +43,10 @@
   components:
   - type: StorageFill
     contents:
+      - id: CP14KeyRingBanker
       - id: HandLabeler #TODO custom cp14 labeler
+      - id: CP14StampDenied
+      - id: CP14StampApproved
       - id: CP14PaperFolderRed
         amount: 2
       - id: CP14PaperFolderBlue
@@ -61,3 +65,16 @@
         prob: 0.2
       - id: CP14SilverCoin1
         prob: 0.2
+
+- type: entity
+  parent: CP14WoodenCloset
+  id: CP14WoodenClosetCommandantFilled
+  suffix: Commandant, Filled
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14KeyRingCommandant
+      - id: HandLabeler #TODO custom cp14 labeler
+      - id: CP14StampDenied
+      - id: CP14StampApproved
+      - id: CP14StampCommandant
