--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
@@ -389,3 +389,21 @@
       count: 5
       minGroupSize: 2
       maxGroupSize: 5
+
+- type: cp14DemiplaneModifier
+  id: RoyalPumpkin
+  reward: 0.2
+  generationWeight: 0.1
+  requiredTags:
+  - CP14DemiplaneGrass
+  - CP14DemiplaneOpenSky
+  layers:
+    - !type:OreDunGen
+      tileMask: 
+      - CP14FloorGrass
+      - CP14FloorGrassLight
+      - CP14FloorGrassTall
+      entity: CP14RoyalPumpkin
+      count: 1
+      minGroupSize: 1
+      maxGroupSize: 1
