Sorry, error fix

--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Furniture/Misc.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Furniture/Misc.yml
@@ -82,7 +82,6 @@
             - material: CP14WoodenPlanks
               amount: 5
               doAfter: 3
-            - material: CP14Stone
-              amount: CP14Nail
+            - material: CP14Nail
               amount: 2
               doAfter: 2
