--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/barrel.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/barrel.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: CP14BaseBarrel
-  parent: 
+  parent:
   - BaseStructureDynamic
   - CP14BaseFlammable
   name: wooden barrel
@@ -14,6 +14,9 @@
     noRot: true
   - type: InteractionOutline
   - type: Physics
+  - type: Construction
+    graph: CP14BaseBarrel
+    node: CP14BaseBarrel
   - type: Fixtures
     fixtures:
       fix1:
